# Fractal

./: CMakeLists.txt  README.md  camera.py  fractal.py  main.py  shaders.py
include/: App.h  Renderer.h  Shader.h  camera.h
include/glad/: glad.h
shaders/: fractal.comp  fragment.glsl  fullscreen.vert  mandelbulb.frag  quad.frag  quad.vert  vertex.glsl
src/: App.cpp  Renderer.cpp  Shader.cpp  camera.cpp  main.cpp
